<resources>
    <string name="app_name">Auto Clicker</string>
    <string name="delay">Delay</string>
    <string name="random">Random radius</string>
    <string name="select_gesture_type">Select gesture type</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_profile_name">New profile name</string>
    <string name="gesture_properties">Gesture properties</string>
    <string name="apply">Apply</string>
    <string name="properties_delay">Delay before dispatching</string>
    <string name="properties_time">Dispatch time</string>
    <string name="properties_dispatch_every">Dispatch every x cycles</string>
</resources>
