<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_gesture_type"
        app:layout_constraintStart_toStartOf="@+id/new_gesture_list"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_gesture_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_gesture_confirm"
        app:layout_constraintTop_toBottomOf="@+id/new_gesture_list" />

    <Button
        android:id="@+id/new_gesture_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="@+id/new_gesture_cancel"
        app:layout_constraintStart_toEndOf="@+id/new_gesture_cancel"
        app:layout_constraintTop_toTopOf="@+id/new_gesture_cancel"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/new_gesture_list"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</android.support.constraint.ConstraintLayout>